--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,14 @@
 h1 {
-  color: red;
+  color: lightblue;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#canvasRoot {
+  border: 1px solid black;
+  background-color: rgba(62, 75, 78, .5);
 }
