--- a/styles/index.css
+++ b/styles/index.css
@@ -12,3 +12,9 @@ body {
   border: 1px solid black;
   background-color: rgba(62, 75, 78, .5);
 }
+
+#tf{
+  height: 250px;
+  display: flex;
+  flex-direction: row;
+}
