--- a/styles/index.css
+++ b/styles/index.css
@@ -1,22 +1,40 @@
-h1 {
-  color: lightblue;
-}
-
 body {
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-#canvasRoot {
-  border: 1px solid black;
-  background-color: rgba(62, 75, 78, .5);
+h1 {
+  color: lightblue;
+  font-weight: 600;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 10px;
 }
 
-#tf{
-  height: 250px;
-  display: flex;
-  flex-direction: row;
+h3 {
+  font-size: 24px;
+  font-weight: 500;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+p {
+  font-size: 20px;
+  font-weight: 500;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 10px;
+}
+
+button {
+  border-radius: 15px;
+  font-size: 20px;
+  margin: 10px;
+  padding: 10px 15px;
+  box-shadow: 1px 1px 1px 1px gray;
+}
+
+button:hover {
+  background-color: lightblue;
 }
 
 video {
@@ -24,24 +42,23 @@ video {
   transform: scaleX(-1);
 }
 
+#game-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 
 .modal {
-  /* display: block; */
-  /* Hidden by default */
   position: fixed;
-  /* Stay in place */
   z-index: 1;
-  /* Sit on top */
   left: 0;
   top: 0;
   width: 100%;
-  /* Full width */
   height: 100%;
-  /* Full height */
-  overflow: auto;
-  /* Enable scroll if needed */
+  /* overflow: auto; */
   background-color: rgba(0, 0, 0, 0.9);
-  /* Black w/ opacity */
 }
 
 .modal-content {
@@ -50,6 +67,7 @@ video {
   /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
+  border-radius: 10px;
   width: 80%;
   /* Could be more or less, depending on screen size */
   display: flex;
@@ -57,19 +75,6 @@ video {
   flex-direction: column;
 }
 
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
 
 #modal-init{
   display: block;
@@ -85,4 +90,26 @@ video {
 
 #modal-neutral {
   display: none;
+}
+
+#modal-win {
+  display: block;
+}
+
+ul {
+ list-style: none;
+}
+
+#modal-win ul {
+  display: flex;
+  flex-direction: row;
+}
+
+#modal-win li {
+  margin: 15px;
+  font-size: 20px;
+}
+
+a {
+  text-decoration: none;
 }
