--- a/styles/index.css
+++ b/styles/index.css
@@ -4,34 +4,40 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
   color: rgb(95, 167, 190);
   font-weight: 600;
-  font-family: Arial, Helvetica, sans-serif;
   margin: 10px;
 }
 
 h3 {
   font-size: 24px;
   font-weight: 500;
-  font-family: Arial, Helvetica, sans-serif;
   margin: 10px;
 }
 
 h4 {
   font-size: 20px;
   font-weight: 500;
-  font-family: Arial, Helvetica, sans-serif;
   margin: 0px 5px 10px 5px;
 }
 
 p {
   font-size: 20px;
   font-weight: 500;
-  font-family: Arial, Helvetica, sans-serif;
   margin: 10px;
+  text-align: center;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
 }
 
 button {
@@ -88,7 +94,6 @@ video {
   top: 0;
   width: 100%;
   height: 100%;
-  /* overflow: auto; */
   background-color: rgba(0, 0, 0, 0.9);
   display: flex;
   justify-content: center;
@@ -110,7 +115,6 @@ video {
   justify-content: center;
 }
 
-
 #modal-init{
   display: block;
 }
@@ -131,10 +135,6 @@ video {
   display: none;
 }
 
-ul {
- list-style: none;
-}
-
 #modal-win ul {
   display: flex;
   flex-direction: row;
@@ -142,9 +142,6 @@ ul {
 
 #modal-win li {
   margin: 15px;
-  font-size: 20px;
+  font-size: 26px;
 }
 
-a {
-  text-decoration: none;
-}
