--- a/index.css
+++ b/index.css
@@ -9,19 +9,19 @@ body {
 
 h1 {
   color: rgb(95, 167, 190);
-  font-weight: 600;
+  font-weight: 500;
   margin: 10px;
 }
 
 h3 {
   font-size: 24px;
-  font-weight: 500;
+  font-weight: 400;
   margin: 10px;
 }
 
 p {
   font-size: 20px;
-  font-weight: 500;
+  font-weight: 400;
   margin: 10px;
   text-align: center;
 }
@@ -127,15 +127,7 @@ video {
   display: block;
 }
 
-#modal-left{
-  display: none;
-}
-
-#modal-right{
-  display: none;
-}
-
-#modal-neutral {
+#modal-loading{
   display: none;
 }
 
