--- a/index.css
+++ b/index.css
@@ -84,7 +84,7 @@ video {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: rgba(0, 0, 0, 0.95);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -98,7 +98,8 @@ video {
   border: 1px solid #888;
   border-radius: 5px;
   width: 80%;
-  max-width: 750px;
+  max-width: 550px;
+
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -114,7 +115,7 @@ video {
 }
 
 #modal-win {
-  display: block;
+  display: none;
 }
 
 #modal-win ul {
