--- a/index.css
+++ b/index.css
@@ -84,9 +84,11 @@ video {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.95);
+  
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  flex-direction: column;
 }
 
 .modal-content {
@@ -106,7 +108,12 @@ video {
 }
 
 #modal-init{
-  display: block;
+  display: flex;
+}
+
+#video-sample video{
+  width: 400px;
+  height: 400px;
 }
 
 #modal-loading{
