--- a/index.css
+++ b/index.css
@@ -111,9 +111,15 @@ video {
   display: flex;
 }
 
+#video-sample{
+  margin: 50px 25px;
+  border: 3px solid lightgray;
+}
+
 #video-sample video{
-  width: 400px;
-  height: 400px; 
+  width: 100%;
+  height: 300px;
+  max-height: 100%; 
 }
 
 #modal-loading{
