--- a/index.css
+++ b/index.css
@@ -138,7 +138,7 @@ video {
 }
 
 #modal-loading{
-  display: flex;
+  display: none;
 }
 
 #modal-win {
@@ -255,7 +255,7 @@ video {
   }
 }
 
-.modal-loading-content{
+#modal-loading-content{
   position: absolute;
   top: 30%;
   color: white;
